[Type checker] Check type equality even for argument tuples in Swift 4.

Replace a where Type-pointer-equality check with what it intended,
i.e., match up ParenTypes at the top level and perform a deeper
equality comparison of the underlying types.

Fixes SR-5166 / rdar://problem/32666189.

(cherry picked from commit a570a5a15e8efcf066ed0fa8ec50843dbc8ebf32)